Step3: 구간 제거 기능 심화 (#31)
* test: Line의 중간 Station을 제거하는 인수테스트를 작성한다

* feat: Section.disconnectStation은 모든 방향에서 station을 삭제한다

* feat: line.disconnectStation은 모든 방향에서 station을 삭제한다

* feat: LineService.disconnectSectionByStationId 는 모든 방향에서 section을 삭제한다

* feat: SectionDao.deleteBySectionId 는 sectionId를 기반으로 section을 삭제한다

* refactor: delete Section 관련 사용하지 않는 메소드를 삭제한다

* refactor: SectionConnector를 리팩토링 한다

* refactor: Section.disconnectStation 을 enum으로 분리한다

* refactor: null, 혹은 wrapper가 필요하지 않은곳의 타입을 primitive로 변경한다

* refactor: IllegalState, Sql 에러가 로그를 남기도록 수정한다

* refactor: 테스트 wrapper 및, 인수테스트 assert를 한곳에서 관리하게 한다

* refactor: Name, Color, Distance를 일급객체로 만든다

* fix: 삭제가능한 station을 찾을 수 없을때, 400 예외를 반환하도록 수정한다

* refactor: enum 분기를 삭제하고, Section안의 if문으로 변경한다

* refator: Handling 되지않은 예외를 잡는다

* refactor: 예외에 code를 함께 반환하며, 모든 테스트에서 예외를 자세히 검증한다

* test: Section이 중간 station을 삭제할 경우, 거리가 정상적으로 업데이트 되는지 확인한다

* refactor: Section과 Line을 외부에서 변경하지 못하도록 만든다

* test: Line 내부의 Sections의 상태를 검증한다