@@ -2,40 +2,41 @@ package subway.domain;
 
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import org.springframework.util.Assert;
+import subway.domain.response.SectionDisconnectResponse;
+import subway.domain.status.LineExceptionStatus;
+import subway.util.Assert;
 
 public class Line {
 
     private static final int MIN_DELETABLE_SIZE = 1;
 
     private final Long id;
-    private final String name;
-    private final String color;
+    private final Name name;
+    private final Color color;
     private final List<Section> sections;
 
     public Line(Long id, String name, String color, List<Section> sections) {
         this.id = id;
-        this.name = name;
-        this.color = color;
+        this.name = new Name(name);
+        this.color = new Color(color);
         this.sections = sections;
         initSectionConnection(this.sections);
     }
 
     public Line(Long id, String name, String color) {
         this.id = id;
-        this.name = name;
-        this.color = color;
+        this.name = new Name(name);
+        this.color = new Color(color);
         this.sections = new ArrayList<>();
     }
 
     public Line(String name, String color, List<Section> sections) {
         this.id = null;
-        this.name = name;
-        this.color = color;
+        this.name = new Name(name);
+        this.color = new Color(color);
         this.sections = sections;
         initSectionConnection(this.sections);
     }
@@ -45,7 +46,7 @@ public class Line {
             Optional<Section> downSection = sections.stream()
                     .filter(section -> currentSection.getDownStation().equals(section.getUpStation())).findFirst();
 
-            downSection.ifPresent(section -> currentSection.connectDownSection(downSection.get()));
+            downSection.ifPresent(section -> currentSection.connectSection(downSection.get()));
         }
     }
 
@@ -83,10 +84,16 @@ public class Line {
             isDownStationExists = isStationExists(downStation, isDownStationExists, section);
         }
 
+        validIsDuplicatedSection(upStation, downStation, isUpStationExists, isDownStationExists);
+    }
+
+    private void validIsDuplicatedSection(Station upStation, Station downStation, boolean isUpStationExists,
+            boolean isDownStationExists) {
         boolean isAllExist = isDownStationExists && isUpStationExists;
+
         Assert.isTrue(!isAllExist,
                 () -> MessageFormat.format("upStation \"{0}\" 과 downStation \"{1}\"이 line\"{2}\"에 모두 존재합니다.", upStation,
-                        downStation, sections));
+                        downStation, sections), LineExceptionStatus.DUPLICATED_SECTIONS.getStatus());
     }
 
     private boolean isStationExists(Station upStation, boolean isUpStationExists, Section section) {
@@ -96,18 +103,17 @@ public class Line {
         return isUpStationExists;
     }
 
-    public void disconnectDownSection(Station downStation) {
-        Assert.isTrue(sections.size() > MIN_DELETABLE_SIZE, () -> "line에 구간이 하나만 있으면, 구간을 삭제할 수 없습니다.");
+    public SectionDisconnectResponse disconnectSection(Station station) {
+        Assert.isTrue(sections.size() > MIN_DELETABLE_SIZE, () -> "line에 구간이 하나만 있으면, 구간을 삭제할 수 없습니다.",
+                LineExceptionStatus.DISCONNECT_FAIL_DELETABLE_SIZE.getStatus());
         Section downSection = sections.get(0).findDownSection();
 
-        Assert.isTrue(downSection.getDownStation().equals(downStation),
-                () -> MessageFormat.format("삭제할 station \"{0}\" 은 하행의 downStation \"{1}\" 과 일치해야 합니다.",
-                        downStation, downSection.getDownStation()));
+        Section upSection = downSection.findUpSection();
 
-        Section upSection = downSection.getUpSection();
+        SectionDisconnectResponse sectionDisconnectResponse = upSection.disconnectStation(station);
+        sections.remove(sectionDisconnectResponse.getDeletedSection());
 
-        upSection.disconnectDownSection();
-        sections.remove(downSection);
+        return sectionDisconnectResponse;
     }
 
     public Long getId() {
@@ -115,15 +121,15 @@ public class Line {
     }
 
     public String getName() {
-        return name;
+        return name.value;
     }
 
     public String getColor() {
-        return color;
+        return color.value;
     }
 
     public List<Section> getSections() {
-        return Collections.unmodifiableList(sections);
+        return List.copyOf(sections);
     }
 
     @Override
@@ -150,6 +156,7 @@ public class Line {
                 "id=" + id +
                 ", name='" + name + '\'' +
                 ", color='" + color + '\'' +
+                ", sections=" + sections +
                 '}';
     }
 }
